--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "drizzle-kit": "^0.20.16"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "hono": "^4.2.5"
+    "drizzle-orm": "^0.30.8",
+    "hono": "^4.2.5",
+    "postgres": "^3.4.4"
   }
 }
