--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "rdiazlugo-api",
   "module": "index.ts",
   "type": "module",
+  "scripts": {
+    "public": "bunx localtunnel --port 3001 --subdomain rdiazlugo-api",
+    "db:generate": "drizzle-kit generate:pg"
+  },
   "devDependencies": {
     "@types/bun": "latest",
     "drizzle-kit": "^0.20.16"
