--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@netlify/functions": "^2.6.0",
+    "discord-interactions": "^3.4.0",
     "drizzle-orm": "^0.30.8",
     "hono": "^4.2.5",
     "postgres": "^3.4.4"
