--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "discord-interactions": "^3.4.0",
     "drizzle-orm": "^0.30.8",
     "hono": "^4.2.5",
+    "mappersmith": "^2.43.4",
     "postgres": "^3.4.4"
   }
 }
