--- a/bunfig.toml
+++ b/bunfig.toml
@@ -1,3 +1,3 @@
 [install.scopes]
 
-"@rdiazlugo" = { token = "$GITHUB_ACCESS_TOKEN", url = "https://npm.pkg.github.com" }
+"@rdiazlugo" = { token = "$NODE_AUTH_TOKEN", url = "https://npm.pkg.github.com" }
